# village-wars

./: CMakeLists.txt  LICENSE  README.md  file_management.c  file_management.h  main.c  user.c  utils.c
headers/: constants.h  file_management.h  user.h  user_menu.h  utils.h
user/: user.c  user.h  user_menu.c  user_menu.h
user/attacks/: attacks.c  attacks.h
user/military/: add_military.h  build_soldiers.h  check_can_build.h  miliraty.c  miliraty.h  number_military.h  view_military.h
user/resources/: resources.c  resources.h
user/resources_building/: add_building.h  add_resource.h  building.h  capacity.h  capcity.h  check_up_building.h  check_up_resources.h  collecting_resources.h  delete_building.h  delete_resources.h  max_capacity.h  number_of_building.h  number_of_resources.h  printboard_resource.h  production_per_min.h  resource.h  set_time.h  upgrade_building.h  upgrade_resource.h  view_building.h  view_resources.h
utils/: enums.h  input.c  input.h  print_time.h  structs.h  time.c  time.h  utils.c  utils.h
